# D2X-UDP_MQTT_GW

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  udpmqttgw.example.conf  udpmqttgw.service
autogen/: version.h.in
src/: main.cpp
